--- a/18-Add To Cart/index.html
+++ b/18-Add To Cart/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add To Cart</title>
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
@@ -16,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,8 +44,6 @@
     </header>
 
     <aside>
-
-
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
@@ -55,12 +52,13 @@
             </div>
             <div class="offcanvas-body border p-2">
                 <div class="row" id="cartRow">
-                    
+                    <img src="https://cdn-icons-png.flaticon.com/512/16961/16961608.png" />
+                    <h4>No Item in Cart</h4>
                 </div>
             </div>
             <div class="offcanvas-footer p-2">
                 <div class="shadow rounded p-3">
-                    <h5>Total:- <b class="badge text-bg-info" id="total"></b></h5>
+                    <h5>Total:- <b class="badge text-bg-info" id="total"></b></h4>
                 </div>
             </div>
         </div>
